# open2log

./: .gitignore  .sops.yaml  CLAUDE.md  GOAL.md  README.md  deploy-logs.txt  devenv.nix
.claude/: settings.json
.claude/commands/: adr.md
.claude/skills/adr-suggester/: SKILL.md
apps/ios/: Package.swift
apps/web/open2log/: .gitignore  README.md  mix.exs
apps/web/open2log/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
data/pipelines/: README.md  consolidate.sql  crawl_lidl_eu.sql  crawl_lidl_fi.sql  crawl_s_kaupat.sql  crawl_tokmanni.sql
data/schemas/: products.sql
doc/adr/: 0001-record-architecture-decisions.md  0003-use-duckdb-for-data-processing.md  0004-use-cloudflare-for-edge.md  0005-use-elixir-phoenix-for-backend.md  0006-use-hetzner-for-infrastructure.md  0007-use-swift-for-ios.md  0008-use-ducklake-for-data-storage.md  0009-use-gluetun-for-crawling-proxy.md
docs/: infra.md  logo.md  optimizations.md
infra/: .terraform.lock.hcl  cloudflare.tf  config.tf  hetzner.tf  main.tf  nixos-deploy.tf  providers.tf  result  variables.tf
infra/keys/: onnimonni.pub
infra/scripts/: get-ssh-host-key.sh
secrets/: infra.yaml
secrets/hosts/: memento-mori.yaml
server/configuration/: disk-config.nix  flake.nix  hardware-configuration.nix
server/modules/: base.nix  firewall.nix  gluetun.nix  litestream.nix  phoenix.nix
workers/image-upload/: Cargo.toml  wrangler.toml
workers/image-upload/src/: lib.rs
workers/shopping-lists/: Cargo.toml  schema.sql  wrangler.toml
workers/shopping-lists/src/: lib.rs
(+68 files in other folders)
