[package]
name = "image-upload-worker"
version = "0.1.0"
edition = "2021"
authors = ["Onni Hakala <onni@flaky.build>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.4"
worker-macros = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[profile.release]
opt-level = "s"
lto = true
